# Arkadkabinett

./: .gitignore  Cargo.toml  README.md  admin  hello.html  localhost.crt  localhost.key  plan.md  script.js
benches/: benchmarks.rs  encrypted_message  private_key
files/: 404.html  admin  admin.html  forge.min.js  forge.min.js.map  hello.html  home.html  login.html  script.js  style.css
files/admin/: index.html
files/text/css/: admin.css  style.css
files/text/javascript/: admin.js  login.js  script.js
src/: HTML_helpers.rs  lib.rs  main.rs  security.rs  server_API.rs  util.rs
