[package]
name = "arkadkabinett"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
criterion = "0.5.1"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
rand = "0.8.5"
rsa = { version = "0.9.6", features = ["sha2"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
codegen-units = 1
lto = "fat"

