[package]
name = "arkadkabinett"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
criterion = "0.5.1"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
http = "1.0.0"
http-body-util = "0.1.0"
hyper = "1.1.0"
hyper-util = {version = "0.1.3", features = ["server"]}
rand = "0.8.5"
rsa = { version = "0.9.6", features = ["sha2"] }
rustls = "0.22.2"
rustls-pemfile = "2.0.0"
sha256 = "1.5.0"
tokio = {version = "1.36.0", features = ["full"]}
tokio-rustls = "0.25.0"
webpki-roots = "0.26.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
codegen-units = 1
lto = "fat"

